package DesignPatterns.IteratorPattern.Iterators;

public interface Iterator {
    boolean hasNext();
    Object next();
}
